--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -5237,8 +5237,574 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c7d09b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# single inheritance\n",
+    "\n",
+    "class Parent:\n",
+    "    \n",
+    "    def pdisplay(self):\n",
+    "        print('PARAENT')\n",
+    "    \n",
+    "class Child(Parent):\n",
+    "    \n",
+    "    def cdisplay(self):\n",
+    "        print('CHILD')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1455a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARAENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "pobj=Parent()\n",
+    "cobj = Child()\n",
+    "pobj.pdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "340fcbbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHILD\n",
+      "PARAENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "cobj.cdisplay()\n",
+    "cobj.pdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "87c688d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiple\n",
+    "\n",
+    "class abc:\n",
+    "    def adisplay(self):\n",
+    "        print('ABC')\n",
+    "\n",
+    "class xyz:\n",
+    "    def xdisplay(self):\n",
+    "        print('XYZ')\n",
+    "    \n",
+    "class abyz(abc,xyz):\n",
+    "    def axdisplay(self):\n",
+    "        print('ABYZ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f002e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "XYZ\n",
+      "ABYZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj1 = abyz()\n",
+    "obj1.adisplay()\n",
+    "obj1.xdisplay()\n",
+    "obj1.axdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1bcf0ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multilevel Inhritance\n",
+    "\n",
+    "class a:\n",
+    "    def adisplay(self):\n",
+    "        print('Level 1')\n",
+    "        \n",
+    "class b(a):\n",
+    "    def bdisplay(self):\n",
+    "        print('Level 2')\n",
+    "        \n",
+    "class c(b):\n",
+    "    def cdisplay(self):\n",
+    "        print('Level 3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f2e5d0b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=a()\n",
+    "y=b()\n",
+    "z=c()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "46d2706c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 1\n",
+      "Level 2\n",
+      "Level 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "z.adisplay()\n",
+    "z.bdisplay()\n",
+    "z.cdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "63c4f4c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 1\n",
+      "Level 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "y.adisplay()\n",
+    "y.bdisplay()\n",
+    "# y.cdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dbdfad15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.adisplay()\n",
+    "# x.bdisplay()\n",
+    "# x.cdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a3964b68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class a:\n",
+    "    def adis(self):\n",
+    "        print('PARAENT')\n",
+    "        \n",
+    "class b(a):\n",
+    "    def bdis(self):\n",
+    "        print('CHILD 1')\n",
+    "        \n",
+    "class c(a):\n",
+    "    def cdis(self):\n",
+    "        print('CHILD 2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aaa5bb4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=a()\n",
+    "y=b()\n",
+    "z=c()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "65133992",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARAENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.adis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a9fca933",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHILD 1\n",
+      "PARAENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "y.bdis()\n",
+    "y.adis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "55816019",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHILD 2\n",
+      "PARAENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "z.cdis()\n",
+    "z.adis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6c587b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class person:\n",
+    "    \n",
+    "    def __init__(self, fname, lname):\n",
+    "        self.fname = fname\n",
+    "        self.lname = lname\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('First Name :', self.fname)\n",
+    "        print('Last Name :', self.lname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a906a103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = person('Digvijay','Mohite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b18e50c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name : Digvijay\n",
+      "Last Name : Mohite\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ca159b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=person('SACHIN','TENDULKAR')\n",
+    "obj2=person('VIRAT', 'KOHLI')\n",
+    "obj3=person('DIGVIJAY', 'MOHITE')\n",
+    "obj4=person('SOURAV', 'GANGULY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f88ae35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name : SACHIN\n",
+      "Last Name : TENDULKAR\n",
+      "First Name : VIRAT\n",
+      "Last Name : KOHLI\n",
+      "First Name : DIGVIJAY\n",
+      "Last Name : MOHITE\n",
+      "First Name : SOURAV\n",
+      "Last Name : GANGULY\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display()\n",
+    "obj2.display()\n",
+    "obj3.display()\n",
+    "obj4.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7604ac22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class player(person):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e87cdc58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=player('suryakumar','yadav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "66d92ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name : suryakumar\n",
+      "Last Name : yadav\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "de0508a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VIRAT\n",
+      "DELHI\n",
+      "18\n",
+      "ROHIT\n",
+      "NAGPUR\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "class seniour:\n",
+    "    def __init__(self,aname,acity,ajno):\n",
+    "        self.name=aname\n",
+    "        self.city=acity\n",
+    "        self.jno=ajno\n",
+    "    def sdisplay(self):\n",
+    "        print(self.name)\n",
+    "        print(self.city)\n",
+    "        print(self.jno)\n",
+    "        \n",
+    "class jouniour(seniour):\n",
+    "    def __init__(self,pname, pcity, pjno,page):\n",
+    "        self.name=pname\n",
+    "        self.city=pcity\n",
+    "        self.jno=pjno\n",
+    "        self.age=page\n",
+    "        \n",
+    "    def jdisplay(self):\n",
+    "        print(self.name)\n",
+    "        print(self.city)\n",
+    "        print(self.jno)\n",
+    "        print(self.age)\n",
+    "        \n",
+    "obj=seniour('VIRAT','DELHI',18)\n",
+    "obj1=jouniour('ROHIT', 'NAGPUR', 45, 36)\n",
+    "obj.sdisplay()\n",
+    "obj1.sdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3ff2a102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VIRAT\n",
+      "DELHI\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=seniour('VIRAT','DELHI',18)\n",
+    "obj.sdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34dfd786",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROHIT\n",
+      "NAGPUR\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=jouniour('ROHIT', 'NAGPUR', 45, 36)\n",
+    "# obj.jdisplay()\n",
+    "obj.sdisplay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "471d476b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHINDE\n",
+      "SS\n",
+      "67\n",
+      "SHINDE\n",
+      "SS\n"
+     ]
+    }
+   ],
+   "source": [
+    "class pm:\n",
+    "    \n",
+    "    def __init__(self, aname, aparty):\n",
+    "        self.name = aname\n",
+    "        self.party = aparty\n",
+    "    \n",
+    "    def pdis(self):\n",
+    "        print(self.name)\n",
+    "        print(self.party)\n",
+    "        \n",
+    "class cm(pm):\n",
+    "    \n",
+    "    def __init__(self, aname, aparty, ag):\n",
+    "        pm.__init__(self, aname, aparty)\n",
+    "        self.a = ag\n",
+    "        \n",
+    "    def cdis(self):\n",
+    "        print(self.name)\n",
+    "        print(self.party)\n",
+    "        print(self.a)\n",
+    "        \n",
+    "o = pm('MODI', 'BJP')\n",
+    "oo = cm('SHINDE','SS',67)\n",
+    "oo.cdis()\n",
+    "oo.pdis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50098bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c500dde",
    "metadata": {},
    "outputs": [],
    "source": []
