--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -11527,7 +11527,13 @@
     "> Restricting the scope of variables and methods to this peticular class through \"access specifiers\" (method name, variable naame)\n",
     "\n",
     "> Access Specifiers :\n",
-    "  >> 1. Public (default) , 2. Private  "
+    "  >> 1. Public (default) , 2. Private  \n",
+    "  \n",
+    "> In encapsulation, access modifiers control the visibility of properties and methods. There are typically three levels of access:\n",
+    "\n",
+    "    1. Public: Accessible from anywhere. (No underscore before the attribute/method name)\n",
+    "    2. Protected: Accessible within the class and its subclasses. (Single underscore before the attribute/method name)\n",
+    "    3. Private: Accessible only within the class. (Double underscore before the attribute/method name)"
    ]
   },
   {
@@ -11560,7 +11566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da3bb58f-b0fb-47ec-8835-a15ff2ce0628",
+   "id": "45141881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11573,6 +11579,65 @@
     "obj = Encap()\n",
     "print(obj.a) # AttributeError: 'Encap' object has no attribute 'a'\n",
     "obj.display() # AttributeError: 'Encap' object has no attribute 'display'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "292f0509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, make, model):\n",
+    "        self._make = make  # protected attribute\n",
+    "        self._model = model  # protected attribute\n",
+    "        self.__speed = 0  # private attribute\n",
+    "\n",
+    "    def accelerate(self):\n",
+    "        self.__speed += 10\n",
+    "        print(f\"The car is now moving at {self.__speed} km/h\")\n",
+    "\n",
+    "    def brake(self):\n",
+    "        self.__speed -= 5\n",
+    "        print(f\"The car slowed down to {self.__speed} km/h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ca46f4ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is now moving at 10 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=Car('HYUNDAI','CRETA')\n",
+    "obj.accelerate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a776bdbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car slowed down to 5 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.brake()"
    ]
   },
   {
@@ -11596,7 +11661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "75075a30-dca3-420f-9154-78cee9e85e4d",
    "metadata": {},
    "outputs": [
@@ -11612,7 +11677,7 @@
     "from abc import ABC, abstractmethod\n",
     "\n",
     "class AbstractDemo(ABC):\n",
-    "    @ abstractmethod\n",
+    "    @abstractmethod\n",
     "    def display(self):\n",
     "        None\n",
     "\n",
@@ -11670,14 +11735,44 @@
     "\n",
     "> Polymorphisam meance implementing same thing in different way, e.g one person doing different work\n",
     "> Two Types\n",
-    ">> 1. Overloading Method\n",
+    ">> 1. Overloading Method (compile-time polymorphism)\n",
+    ">>> a. opeartor overloading\n",
+    ">>> b. method overloading\n",
     "\n",
-    ">> 2. Overriding Method"
+    ">> 2. Overriding Method (run-time polymorphism)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
+   "id": "64b3b6bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "1020\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. overloading method\n",
+    "# opearator overloading\n",
+    "\n",
+    "a=10\n",
+    "b=20\n",
+    "print(a+b) # ADDITION\n",
+    "\n",
+    "A='10'\n",
+    "B='20'\n",
+    "print(A+B) # CONCATINATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "26284dd6-7446-4467-9b82-ee683b262058",
    "metadata": {},
    "outputs": [
@@ -11692,7 +11787,7 @@
     }
    ],
    "source": [
-    "# 1. Overloading Method\n",
+    "# Method Overloading Method\n",
     "\n",
     "class moverload:\n",
     "    def display11(self,a=None,b=None):\n",
@@ -11706,7 +11801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "1d9496cb-b46b-4df2-ac24-6046cc27cf12",
    "metadata": {},
    "outputs": [
