--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -5795,16 +5795,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "50098bdd",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Encap' object has no attribute 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# ENCAPSULATION\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mEncap\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     __a\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__display\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[15], line 10\u001b[0m, in \u001b[0;36mEncap\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPYTHON AND DATA SCIENCE\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      9\u001b[0m obj \u001b[38;5;241m=\u001b[39m Encap()\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39ma)\n\u001b[0;32m     11\u001b[0m obj\u001b[38;5;241m.\u001b[39mdisplay()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Encap' object has no attribute 'a'"
+     ]
+    }
+   ],
+   "source": [
+    "# ENCAPSULATION\n",
+    "\n",
+    "class Encap:\n",
+    "    \n",
+    "    __a=100\n",
+    "    def __display(self):\n",
+    "        print('PYTHON AND DATA SCIENCE')\n",
+    "        \n",
+    "    obj = Encap()\n",
+    "    print(obj.a)\n",
+    "    obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c500dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Encap' object has no attribute 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m obj \u001b[38;5;241m=\u001b[39m Encap()\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39ma)\n\u001b[0;32m      3\u001b[0m obj\u001b[38;5;241m.\u001b[39mdisplay()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Encap' object has no attribute 'a'"
+     ]
+    }
+   ],
+   "source": [
+    "obj = Encap()\n",
+    "print(obj.a)\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "55f20ded",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, make, model):\n",
+    "        self._make = make  # protected attribute\n",
+    "        self._model = model  # protected attribute\n",
+    "        self.__speed = 0  # private attribute\n",
+    "\n",
+    "    def accelerate(self):\n",
+    "        self.__speed += 10\n",
+    "        print(f\"The car is now moving at {self.__speed} km/h\")\n",
+    "\n",
+    "    def brake(self):\n",
+    "        self.__speed -= 5\n",
+    "        print(f\"The car slowed down to {self.__speed} km/h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6d3c9086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=Car('TATA','NEXON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "105c9428",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is now moving at 10 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.accelerate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dae406ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car slowed down to 5 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.brake()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "08322b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractclassmethod, abstractmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "168225ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AbstarctDemo(ABC):\n",
+    "#     @abstractmethod\n",
+    "    def display(self):\n",
+    "        print('NAME')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "283eefd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=AbstarctDemo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4d7dfbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6071658c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        return 0\n",
+    "    \n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, asize, abreadth):\n",
+    "        self.size=asize\n",
+    "        self.breadth=abreadth\n",
+    "            \n",
+    "    def area(self):\n",
+    "        return self.size * self.breadth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "109299c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=Rectangle(10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fe1f542a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b6ced41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MathOperations:\n",
+    "    def add(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def add(self, a, b, c):\n",
+    "        return a + b + c\n",
+    "\n",
+    "# Example usage:\n",
+    "math_obj = MathOperations()\n",
+    "# result1 = math_obj.add(1, 2)\n",
+    "result2 = math_obj.add(1, 2, 3)\n",
+    "\n",
+    "# print(result1)  # Output: Error (overloaded methods, but only one is called)\n",
+    "print(result2)  # Output: 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "570ab477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class father:\n",
+    "    def transport(self):\n",
+    "        print('CYCLE')\n",
+    "        \n",
+    "class son(father):\n",
+    "    def transport(self):\n",
+    "        print('BIKE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bb2ab588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CYCLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=father()\n",
+    "obj.transport()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e0260d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIKE\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=son()\n",
+    "obj.transport()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c500dde",
+   "id": "6bab7ef8",
    "metadata": {},
    "outputs": [],
    "source": []
