--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -12151,10 +12151,87 @@
     "\n",
     "def my_function():\n",
     "    x = 9 # local variable\n",
-    "    print('local variable inside function :',x)\n",
+    "    print('local variable inside function :', x)\n",
     "    \n",
     "my_function()\n",
     "print('Local variable outside the function : Not possible because \"NameError: name x is not defined \"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "37ec8b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Directly access the global variable inside a function:\n",
+    "\n",
+    "x = \"global\" \n",
+    "\n",
+    "def f():\n",
+    "    print(x)\n",
+    "\n",
+    "f() # prints \"global\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e1ba7982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Use the global keyword: Declare a variable as global to modify it inside a function\n",
+    "\n",
+    "x = \"global\"\n",
+    "\n",
+    "def f():\n",
+    "    global x\n",
+    "    x = \"changed\"\n",
+    "\n",
+    "f()  \n",
+    "print(x) # \"changed\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "65c0868f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Access via the globals() dictionary: The globals() dict contains all global variables as keys.\n",
+    "x = \"global\"\n",
+    "\n",
+    "def f():\n",
+    "    globals()[\"x\"] = \"changed\"\n",
+    "\n",
+    "f()\n",
+    "print(x) # \"changed\""
    ]
   },
   {
@@ -12353,12 +12430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "86e61a5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Module creation\n",
+    "# Module creation\n",
     "# def Display():\n",
     "#     print('Hello this is Display method in datetime_module')\n",
     "    \n",
@@ -12945,7 +13022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "495202e0",
    "metadata": {},
    "outputs": [],
@@ -12955,7 +13032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "id": "8b5c04ec",
    "metadata": {},
    "outputs": [
@@ -13182,7 +13259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "id": "bdd31bb8",
    "metadata": {},
    "outputs": [
@@ -13359,47 +13436,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f37a65d9-278c-4c26-8a6e-75af5ba1f89f",
+   "id": "11c8b6eb",
    "metadata": {},
    "source": [
     "### Most commonly used special characters in regex:\n",
     "\n",
-    "    \".\" (dot) - Matches any single character except for a newline character.\n",
-    "    \"^\"       - Matches the start of a string.\n",
-    "    \"$\"       - Matches the end of a string.\n",
-    "    \"|\"       - Matches either the pattern before or after the pipe character.\n",
-    "    \"+\"       - Matches one or more of the preceding pattern.\n",
-    "    \"*\"       - Matches zero or more of the preceding pattern.\n",
-    "    \"?\"       - Matches zero or one of the preceding pattern.\n",
-    "    \"[]\"      - Matches any character within the brackets.\n",
-    "    \"[^ ]\"    - Matches any character not within the brackets.\n",
-    "    \"\\d\"      - Matches any digit (0-9).\n",
-    "    \"\\s\"      - Matches any whitespace character.\n",
-    "    \"\\w\"      - Matches any word character (a-z, A-Z, 0-9, and underscore).\n",
+    "Basic Patterns:\n",
     "\n",
-    "    \\A\t      - Returns a match if the specified characters are at the beginning of the string\t\n",
-    "                Example : \"\\AThe\"\t\n",
-    "    \\b\t      - Returns a match where the specified characters are at the beginning or at the end of a word \n",
-    "                (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\t\n",
-    "                Example : r\"\\bain\", r\"ain\\b\"\t\n",
-    "    \\B\t      - Returns a match where the specified characters are present, but NOT at the beginning \n",
-    "                (or at the end) of a word (the \"r\" in the beginning is making sure that the string is being treated as a \"raw string\")\t\n",
-    "                Example : r\"\\Bain\", r\"ain\\B\"\t\n",
-    "    \\d\t      - Returns a match where the string contains digits (numbers from 0-9)\n",
-    "                Example : \"\\d\"\t\n",
-    "    \\D\t      - Returns a match where the string DOES NOT contain digits \n",
-    "                Example : \"\\D\"\t\n",
-    "    \\s\t      - Returns a match where the string contains a white space character \n",
-    "                Example : \"\\s\"\t\n",
-    "    \\S\t      - Returns a match where the string DOES NOT contain a white space character \n",
-    "                Example : \"\\S\"\t\n",
-    "    \\w\t      - Returns a match where the string contains any word characters \n",
-    "                (characters from a to Z, digits from 0-9, and the underscore _ character) \n",
-    "                Example : \"\\w\"\t\n",
-    "    \\W\t      - Returns a match where the string DOES NOT contain any word characters \n",
-    "                Example : \"\\W\"\t\n",
-    "    \\Z\t      - Returns a match if the specified characters are at the end of the string \n",
-    "                Example : \"Spain\\Z\""
+    "        . (dot): Matches any character except a newline.\n",
+    "        ^: Anchors the regex at the start of the string.\n",
+    "        $: Anchors the regex at the end of the string.\n",
+    "        *: Matches 0 or more occurrences of the preceding character.\n",
+    "        +: Matches 1 or more occurrences of the preceding character.\n",
+    "        ?: Matches 0 or 1 occurrence of the preceding character.\n",
+    "        \\: Escapes special characters.\n",
+    "        \n",
+    "Character Classes:\n",
+    "\n",
+    "        [abc]: Matches any of the characters a, b, or c.\n",
+    "        [^abc]: Matches any character except a, b, or c.\n",
+    "        [a-z]: Matches any lowercase letter.\n",
+    "        [0-9]: Matches any digit.\n",
+    "        \n",
+    "Quantifiers:\n",
+    "\n",
+    "        {n}: Matches exactly n occurrences of the preceding character.\n",
+    "        {n,}: Matches n or more occurrences of the preceding character.\n",
+    "        {n,m}: Matches between n and m occurrences of the preceding character.\n",
+    "        \n",
+    "Special Characters:\n",
+    "\n",
+    "        \\d: Matches any digit (equivalent to [0-9]).\n",
+    "        \\D: Matches any non-digit.\n",
+    "        \\w: Matches any alphanumeric character (word character).\n",
+    "        \\W: Matches any non-alphanumeric character.\n",
+    "        \\s: Matches any whitespace character.\n",
+    "        \\S: Matches any non-whitespace character.\n",
+    "        \\Z: Matches any specified characters are at the end of the string.\n",
+    "                \n",
+    "        \n",
+    "Groups and Capturing:\n",
+    "\n",
+    "        () : Groups patterns together.\n",
+    "        (pattern) : Captures the matched pattern for later use.\n",
+    "        \n",
+    "Flags:\n",
+    "\n",
+    "        You can use flags to modify the behavior of the regex. For example, re.IGNORECASE for case-insensitive matching."
    ]
   },
   {
@@ -13798,7 +13881,7 @@
     "pattern = \"Hello\"\n",
     "string1 = \"Hello World\"\n",
     "string2 = \"World Hello\"\n",
-    "\n",
+    "    \n",
     "match1 = re.search(pattern, string1)\n",
     "match2 = re.search(pattern, string2)\n",
     "\n",
